--- a/styles.css
+++ b/styles.css
@@ -34,15 +34,15 @@ header
   .header__logo {
     width: 142px;
     height: 33px;
-    margin-left: 200px;
   }
   .header {
     padding-top: 45px;
     max-height: 74px;
+    padding-left: calc((100% - 880px) / 2);
+    padding-right: calc((100% - 880px) / 2);
   }
   .header__line {
     width: 880px;
-    margin-left: 200px;
   }
 }
 
@@ -119,8 +119,8 @@ profile
 @media screen and (min-width: 1028px) {
   .profile {
     flex-direction: row;
-    padding-left: 200px;
-    padding-right: 200px;
+    padding-left: calc((100% - 880px) / 2);
+    padding-right: calc((100% - 880px) / 2);
     padding-bottom: 51px;
     max-width: 880px;
     justify-content: space-between;
@@ -161,12 +161,29 @@ elements
 
 .elements {
   display: grid;
-  justify-items: center;
+  justify-content: center;
+  align-content: center;
   gap: 20px;
 }
 
 .elements:last-of-type {
   padding-bottom: 0;
+}
+
+@media screen and (min-width: 1028px) {
+  .elements {
+    justify-content: center;
+    align-content: center;
+    grid-template-columns: 282px 282px 282px;
+    gap: 20px 17px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .elements {
+    padding-left: calc((100% - 880px) / 2);
+    padding-right: calc((100% - 880px) / 2);
+  }
 }
 
 /*******************************************
@@ -225,4 +242,15 @@ footer
   font-size: 14px;
   line-height: 17px;
   color: #545454;
+}
+
+@media screen and (min-width: 1028px) {
+  .footer {
+    padding-left: calc((100% - 880px) / 2);
+    padding-right: calc((100% - 880px) / 2);
+  }
+  .footer__auhtor {
+    font-size: 18px;
+    line-height: 22px;
+  }
 }
