--- a/blocks/popup/__close-icon/popup__close-icon.css
+++ b/blocks/popup/__close-icon/popup__close-icon.css
@@ -5,6 +5,8 @@
 }
 
 .popup__close-icon:hover {
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
   transform: rotate(-45deg);
   cursor: url("../images/Layer.png"), pointer;
 }
