--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,7 +6,11 @@
 @import url("./__close-icon/popup__close-icon.css");
 .popup {
   display: none;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   position: absolute;
   width: 100vw;
