--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -12,8 +12,8 @@
 
 @media screen and (max-width: 321px) {
   .popup__container {
-    min-width: 282px;
-    min-height: 322px;
+    max-width: 282px;
+    max-height: 322px;
     -webkit-box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
