--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -3,8 +3,8 @@
   -webkit-box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-  max-width: 430px;
-  max-height: 330px;
+  width: 430px;
+  height: 330px;
   opacity: 1;
   z-index: 2;
   position: relative;
@@ -12,8 +12,8 @@
 
 @media screen and (max-width: 321px) {
   .popup__container {
-    max-width: 282px;
-    max-height: 322px;
+    width: 282px;
+    height: 322px;
     -webkit-box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
