refactoring, подключила правильный шрифт, исправила отображение кнопки add

--- a/blocks/popup/__close-icon/popup__close-icon.css
+++ b/blocks/popup/__close-icon/popup__close-icon.css
@@ -8,7 +8,7 @@
   -webkit-transform: rotate(-45deg);
   -ms-transform: rotate(-45deg);
   transform: rotate(-45deg);
-  cursor: url("../images/Layer.png"), pointer;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 321px) {
