--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -5,7 +5,7 @@
 
 .profile__button:hover {
   opacity: 0.5;
-  cursor: url("../../../images/Layer.png"), pointer;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 1028px) {
