--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -5,6 +5,7 @@
 @import url("./__info/profile__info.css");
 @import url("./__button-add/profile__button-add.css");
 @import url("./__button/profile__button.css");
+@import url("./__add/profile__add.css");
 .profile {
   display: -webkit-box;
   display: -ms-flexbox;
