--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -14,7 +14,7 @@
 
 .popup__button:hover {
   opacity: 0.8;
-  cursor: url("../images/Layer.png"), pointer;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 321px) {
