--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -1,15 +1,21 @@
 .profile__button-add {
-  padding-top: 36px;
-  padding-bottom: 36px;
+  width: 100%;
+  margin-top: 36px;
+  margin-bottom: 36px;
+  height: 50px;
+  border: 2px solid #FFFFFF;
+  box-sizing: border-box;
+  border-radius: 2px;
+  background-color: black;
+  color: #FFFFFF;
 }
 
 @media screen and (min-width: 1028px) {
   .profile__button-add {
-    width: 150px;
-    height: 50px;
+    max-width: 150px;
   }
   .profile__button-add:hover {
     opacity: 0.6;
-    cursor: url("../../../images/Layer.png"), pointer;
+    cursor: pointer;
   }
 }
