--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -1,5 +1,6 @@
 .profile__button-add {
   width: 100%;
+  max-width: 282px;
   margin-top: 36px;
   margin-bottom: 36px;
   height: 50px;
@@ -8,6 +9,8 @@
   border-radius: 2px;
   background-color: black;
   color: #FFFFFF;
+  padding-left: 19px;
+  padding-right: 19px;
 }
 
 @media screen and (min-width: 1028px) {
