--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -6,6 +6,7 @@
 @import url("./__button-add/profile__button-add.css");
 @import url("./__button/profile__button.css");
 @import url("./__add/profile__add.css");
+@import url("./__add-plus/profile__add-plus.css");
 .profile {
   display: -webkit-box;
   display: -ms-flexbox;
