--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,8 +1,11 @@
 .popup__button {
-  width: 358px;
+  width: 100%;
+  padding-left: 36px;
+  padding-right: 36px;
   height: 50px;
   background: #000000;
   border-radius: 2px;
+  border: none;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -10,6 +13,7 @@
   text-align: center;
   color: #FFFFFF;
   margin-bottom: 37px;
+  margin-top: 48px;
 }
 
 .popup__button:hover {
@@ -17,8 +21,11 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 321px) {
+@media screen and (max-width: 580px) {
   .popup__button {
-    width: 238px;
+    margin-bottom: 25px;
+    margin-top: 45px;
+    font-size: 14px;
+    line-height: 17px;
   }
 }
