--- a/blocks/profile/__info-subtitle/profile__info-subtitle.css
+++ b/blocks/profile/__info-subtitle/profile__info-subtitle.css
@@ -1,16 +1,23 @@
 .profile__info-subtitle {
-  font-family: Inter, Arial;
+  font-family: Inter, Arial, serif, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
   color: #FFFFFF;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  padding-left: 19px;
+  padding-right: 19px;
 }
 
 @media screen and (min-width: 1028px) {
   .profile__info-subtitle {
     font-size: 18px;
     line-height: 22px;
+    padding-right: 350px;
+    padding-left: 594px;
   }
 }
