--- a/pages/index.css
+++ b/pages/index.css
@@ -28,4 +28,6 @@
 @import url("../blocks/popup/__input/popup__input.css");
 @import url("../blocks/popup/__container/popup__container.css");
 @import url("../blocks/popup/__close-icon/popup__close-icon.css");
+@import url("../blocks/popup/_opened/popup_opened.css");
+@import url("../blocks/popup/_closed/popup_closed.css");
 @import url("../blocks/body/body.css");
