--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -1,5 +1,5 @@
 .body {
-  font-family: Inter, Arial, serif, sans-serif;
+  font-family: Inter, Arial, sans-serif;
   background-color: black;
   color: #FFFFFF;
 }
