--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,4 +1,4 @@
-.popup__form {
+.popup__title {
   color: black;
   font-style: normal;
   font-weight: 900;
@@ -10,7 +10,7 @@
 }
 
 @media screen and (max-width: 580px) {
-  .popup__form {
+  .popup__title {
     font-size: 18px;
     line-height: 22px;
     margin-bottom: 75px;
