--- a/blocks/profile/__info-subtitle/profile__info-subtitle.css
+++ b/blocks/profile/__info-subtitle/profile__info-subtitle.css
@@ -1,5 +1,5 @@
 .profile__info-subtitle {
-  font-family: Inter, Arial, serif, sans-serif;
+  font-family: Inter, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
