--- a/blocks/profile/__info-title/profile__info-title.css
+++ b/blocks/profile/__info-title/profile__info-title.css
@@ -1,5 +1,5 @@
 .profile__info-title {
-  font-family: Inter, Arial, serif, sans-serif;
+  font-family: Inter, Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 27px;
