--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,4 +1,5 @@
 .popup {
+  display: none;
   padding: 0 20px;
   box-sizing: border-box;
   -webkit-box-pack: center;
@@ -7,7 +8,7 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
   width: 100vw;
   height: 100vh;
   left: 0px;
