--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,7 +1,6 @@
 .popup__button {
   width: 100%;
-  padding-left: 36px;
-  padding-right: 36px;
+  padding: 0 36px;
   height: 50px;
   background: #000000;
   border-radius: 2px;
