--- a/pages/index.css
+++ b/pages/index.css
@@ -30,3 +30,7 @@
 @import url("../blocks/popup/__close-icon/popup__close-icon.css");
 @import url("../blocks/popup/_opened/popup_opened.css");
 @import url("../blocks/body/body.css");
+@import url("../blocks/popup-add/popup-add.css");
+@import url("../blocks/popup-add/_opened/popup-add_opened.css");
+@import url("../blocks/popup-add/__close-icon/popup-add__close-icon.css");
+@import url("../blocks/popup-add/__name/popup-add__name.css");
