--- a/blocks/popup-add/__name/popup-add__name.css
+++ b/blocks/popup-add/__name/popup-add__name.css
@@ -10,9 +10,12 @@
   margin-top: 30px;
   font-size: 14px;
   line-height: 17px;
-  color: #C4C4C4;
 }
 
 .popup-add__name:first-of-type {
   margin-top: 0;
+}
+
+.popup-add__name::placeholder {
+  color: rgb(0, 0, 0, 0.2)
 }
