--- a/pages/index.css
+++ b/pages/index.css
@@ -35,3 +35,4 @@
 @import url("../blocks/popup-add/__close-icon/popup-add__close-icon.css");
 @import url("../blocks/popup-add/__name/popup-add__name.css");
 @import url("../blocks/mesto-card/__subtitle-icon/_active/mesto-card__subtitle-icon_active.css");
+@import url("../blocks/mesto-card/__trash/mesto-card__trash.css");
