--- a/blocks/photo/__container/photo__container.css
+++ b/blocks/photo/__container/photo__container.css
@@ -1,3 +1,7 @@
 .photo__container {
+  display: flex;
+  justify-content: center;
   position: relative;
+  max-width: 100%;
+  max-height: 100%;
 }
