--- a/blocks/photo/photo.css
+++ b/blocks/photo/photo.css
@@ -1,5 +1,5 @@
 .photo {
-  display: none;
+  display: flex;
   flex-direction: column;
   padding: 90px 40px;
   box-sizing: border-box;
@@ -15,6 +15,8 @@
   left: 0px;
   top: 0px;
   background: rgb(0, 0, 0, 0.9);
-  z-index: 1;
   flex-shrink: 1;
+  opacity: 0;
+  visibility: hidden;
+  transition: visibility 0.4s, opacity 0.4s;
 }
