--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -12,12 +12,17 @@
   text-align: center;
   color: #FFFFFF;
   margin-bottom: 37px;
-  margin-top: 48px;
+  margin-top: 18px;
 }
 
 .popup__button:hover {
   opacity: 0.8;
   cursor: pointer;
+}
+
+.popup__button:disabled {
+  opacity: 0.2;
+  cursor: auto;
 }
 
 @media screen and (max-width: 580px) {
