--- a/pages/index.css
+++ b/pages/index.css
@@ -35,6 +35,8 @@
 @import url("../blocks/body/body.css");
 @import url("../blocks/popup/__name/_type_edit/popup__name_type_edit.css");
 @import url("../blocks/popup/__name/_type_new-card/popup__name_type_new-card.css");
+@import url("../blocks/popup/__name/_type_err/popup__name_type_err.css");
+@import url("../blocks/popup/__name-container/popup__name-container.css");
 @import url("../blocks/mesto-card/__subtitle-icon/_active/mesto-card__subtitle-icon_active.css");
 @import url("../blocks/mesto-card/__trash/mesto-card__trash.css");
 @import url("../blocks/popup/__card/popup__card.css");
