--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -39,8 +39,14 @@
 @import url("../blocks/popup/__name-container/popup__name-container.css");
 @import url("../blocks/mesto-card/__subtitle-icon/_active/mesto-card__subtitle-icon_active.css");
 @import url("../blocks/mesto-card/__trash/mesto-card__trash.css");
+@import url("../blocks/mesto-card/__subtitle-icon-like/mesto-card__subtitle-icon-like.css");
+@import url("../blocks/mesto-card/__subtitle-like/mesto-card__subtitle-like.css");
 @import url("../blocks/popup/__card/popup__card.css");
 @import url("../blocks/popup/__text/popup__text.css");
 @import url("../blocks/popup/__container/_new-card/popup__container_new-card.css");
 @import url("../blocks/popup/__container/_type_edit/popup__container_type_edit.css");
 @import url("../blocks/popup/__container-image/popup__container-image.css");
+@import url("../blocks/popup/__container/_confirm/popup__container_confirm.css");
+@import url("../blocks/popup/__title-confirm/popup__title-confirm.css");
+@import url("../blocks/profile/__foto-all/profile__foto-all.css");
+@import url("../blocks/popup/__button-update/popup__button-update.css")
